Disclaimer fix and legend shift

--- a/src/app/matrix-selector/matrix-selector.component.css
+++ b/src/app/matrix-selector/matrix-selector.component.css
@@ -9,6 +9,7 @@
     align-items: center;
     flex-wrap: wrap;
     flex-direction: row;
+    position: relative;
 }
 
 /* .matrix .mrow {
@@ -72,4 +73,11 @@
 .wrap {
   white-space: pre-wrap;
   max-width: 330px;
+}
+.lcol {
+  max-height: 256px;
+  position:absolute;
+  right: -32px;
+  top:0;
+  max-width: 16px;
 }
